--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <video controls>
-            <source src="tu-video.mp4" type="video/mp4">
+            <source src="proyecto.mp4" type="video/mp4">
             Tu navegador no soporta videos.
         </video>
 
@@ -40,4 +40,5 @@
         </div>
     </div>
 </body>
+
 </html>
