--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <span class="tag">AI Knowledge</span>
         </div>
 
-        <video controls>
-            <source src="proyecto.mp4" type="video/mp4">
-            Tu navegador no soporta videos.
-        </video>
+        <video controls width="100%" preload="auto">
+    <source src="proyecto.mp4" type="video/mp4">
+    Tu navegador no soporta el video.
+</video>
 
         <div style="text-align: left; margin-top: 30px;">
             <h3>Resumen Técnico:</h3>
@@ -42,3 +42,4 @@
 </body>
 
 </html>
+
