--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
             <span class="tag">AI Knowledge</span>
         </div>
 
-        <video controls width="100%" preload="auto">
-    <source src="proyecto.mp4" type="video/mp4">
-    Tu navegador no soporta el video.
-</video>
+     <iframe src="https://drive.google.com/file/d/1z4OeIHPjFfJ2GHU6Ucox8tiQzcwDcfln/preview" width="100%" height="450" allow="autoplay"></iframe>
 
         <div style="text-align: left; margin-top: 30px;">
             <h3>Resumen Técnico:</h3>
@@ -42,4 +39,5 @@
 </body>
 
 </html>
+
 
