--- a/index.html
+++ b/index.html
@@ -3,41 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto IaC - Darwin</title>
+    <title>Portafolio Cloud & Infrastructure - Darwin Braca</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f4f4f9; color: #333; text-align: center; padding: 20px; }
-        .container { max-width: 800px; margin: auto; background: white; padding: 30px; border-radius: 10px; shadow: 0 4px 8px rgba(0,0,0,0.1); }
-        h1 { color: #007bff; }
-        video { width: 100%; border-radius: 8px; margin-top: 20px; }
-        .tech-tags { margin: 20px 0; }
-        .tag { background: #007bff; color: white; padding: 5px 15px; border-radius: 20px; font-size: 0.9em; margin: 5px; display: inline-block; }
+        body { font-family: 'Segoe UI', Arial, sans-serif; background-color: #f4f4f9; color: #333; text-align: center; padding: 20px; line-height: 1.6; }
+        .container { max-width: 900px; margin: auto; background: white; padding: 40px; border-radius: 15px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
+        h1 { color: #007bff; margin-bottom: 10px; }
+        h2 { color: #444; margin-top: 30px; }
+        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); margin: 25px 0; }
+        .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }
+        .tech-tags { margin: 25px 0; }
+        .tag { background: #007bff; color: white; padding: 6px 18px; border-radius: 20px; font-size: 0.9em; margin: 5px; display: inline-block; font-weight: bold; }
+        .ai-section { background: #eef7ff; padding: 20px; border-left: 5px solid #007bff; border-radius: 8px; margin-top: 30px; text-align: left; }
+        .resumen { text-align: left; background: #fafafa; padding: 20px; border-radius: 8px; border: 1px solid #eee; }
+        ul { padding-left: 20px; }
+        li { margin-bottom: 10px; }
+        footer { margin-top: 40px; font-size: 0.9em; color: #777; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Despliegue de Infraestructura como Código (IaC)</h1>
-        <p>Demostración práctica de orquestación con <strong>Kubernetes</strong> y escalado horizontal.</p>
+        <h1>Darwin Braca</h1>
+        <p style="font-size: 1.2em; color: #666;">Ingeniero de Infraestructura & Cloud Solutions</p>
         
         <div class="tech-tags">
-            <span class="tag">Kubernetes</span>
-            <span class="tag">YAML</span>
-            <span class="tag">DevOps</span>
-            <span class="tag">AI Knowledge</span>
+            <span class="tag">Kubernetes (K8s)</span>
+            <span class="tag">Docker</span>
+            <span class="tag">Python (FastAPI)</span>
+            <span class="tag">CI/CD</span>
+            <span class="tag">Infrastructure as Code</span>
         </div>
 
-     <iframe src="https://drive.google.com/file/d/1z4OeIHPjFfJ2GHU6Ucox8tiQzcwDcfln/preview" width="100%" height="450" allow="autoplay"></iframe>
+        <hr style="border: 0; border-top: 1px solid #eee; margin: 30px 0;">
 
-        <div style="text-align: left; margin-top: 30px;">
-            <h3>Resumen Técnico:</h3>
+        <h2>Despliegue de Infraestructura Resiliente</h2>
+        <p>Demostración práctica de contenerización y orquestación con alta disponibilidad.</p>
+
+        <div class="video-wrapper">
+            <iframe src="https://www.youtube.com/embed/3ugEfcPBwsw" 
+                title="Infraestructura Resiliente - Darwin Braca" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen>
+            </iframe>
+        </div>
+
+        <div class="resumen">
+            <h3>Capacidades Técnicas del Proyecto:</h3>
             <ul>
-                <li><strong>Automatización:</strong> Uso de manifiestos declarativos.</li>
-                <li><strong>Escalabilidad:</strong> Gestión de réplicas de 3 a 8 pods en tiempo real.</li>
-                <li><strong>Observabilidad:</strong> Monitoreo de logs para troubleshooting.</li>
+                <li><strong>Contenerización:</strong> Creación de imágenes optimizadas con Docker para despliegue multiplataforma.</li>
+                <li><strong>Alta Disponibilidad:</strong> Configuración de 3 réplicas en clúster de Kubernetes para garantizar el 99.9% de uptime.</li>
+                <li><strong>Self-Healing:</strong> Orquestación inteligente que detecta fallos en los Pods y recupera el servicio automáticamente.</li>
+                <li><strong>Backend:</strong> Lógica de monitoreo desarrollada en Python utilizando FastAPI.</li>
             </ul>
         </div>
+
+        <div class="ai-section">
+            <p><strong>💡 Visión de IA Knowledge:</strong> Este despliegue es el pilar para la implementación de <em>AIOps</em>. La arquitectura permite integrar agentes de aprendizaje automático que analicen logs y métricas en tiempo real para predecir anomalías en la infraestructura antes de que ocurra un downtime.</p>
+        </div>
+
+        <footer>
+            © 2026 Darwin Braca | Construido con Infraestructura como Código
+        </footer>
     </div>
 </body>
-
 </html>
+
 
 
