--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
         body { font-family: 'Segoe UI', Arial, sans-serif; background-color: #f4f4f9; color: #333; text-align: center; padding: 20px; line-height: 1.6; }
         .container { max-width: 900px; margin: auto; background: white; padding: 40px; border-radius: 15px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
         h1 { color: #007bff; margin-bottom: 10px; }
-        h2 { color: #444; margin-top: 30px; }
+        h2 { color: #444; margin-top: 30px; border-bottom: 2px solid #007bff; display: inline-block; padding-bottom: 5px; }
         .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); margin: 25px 0; }
         .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }
         .tech-tags { margin: 25px 0; }
         .tag { background: #007bff; color: white; padding: 6px 18px; border-radius: 20px; font-size: 0.9em; margin: 5px; display: inline-block; font-weight: bold; }
         .ai-section { background: #eef7ff; padding: 20px; border-left: 5px solid #007bff; border-radius: 8px; margin-top: 30px; text-align: left; }
-        .resumen { text-align: left; background: #fafafa; padding: 20px; border-radius: 8px; border: 1px solid #eee; }
-        ul { padding-left: 20px; }
-        li { margin-bottom: 10px; }
+        .resumen { text-align: left; background: #fafafa; padding: 20px; border-radius: 8px; border: 1px solid #eee; margin-bottom: 40px; }
         footer { margin-top: 40px; font-size: 0.9em; color: #777; }
     </style>
 </head>
@@ -29,39 +27,55 @@
             <span class="tag">Kubernetes (K8s)</span>
             <span class="tag">Docker</span>
             <span class="tag">Python (FastAPI)</span>
-            <span class="tag">CI/CD</span>
-            <span class="tag">Infrastructure as Code</span>
+            <span class="tag">PostgreSQL</span>
+            <span class="tag">AIOps Vision</span>
         </div>
 
         <hr style="border: 0; border-top: 1px solid #eee; margin: 30px 0;">
 
-        <h2>Despliegue de Infraestructura Resiliente</h2>
-        <p>Demostración práctica de contenerización y orquestación con alta disponibilidad.</p>
+        <h2>1. Infraestructura Resiliente y Alta Disponibilidad</h2>
+        <p>Orquestación avanzada con Kubernetes para garantizar la autosanación de servicios.</p>
 
         <div class="video-wrapper">
             <iframe src="https://www.youtube.com/embed/3ugEfcPBwsw" 
                 title="Infraestructura Resiliente - Darwin Braca" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 allowfullscreen>
             </iframe>
         </div>
 
         <div class="resumen">
-            <h3>Capacidades Técnicas del Proyecto:</h3>
+            <strong>Highlights técnicos:</strong>
             <ul>
-                <li><strong>Contenerización:</strong> Creación de imágenes optimizadas con Docker para despliegue multiplataforma.</li>
-                <li><strong>Alta Disponibilidad:</strong> Configuración de 3 réplicas en clúster de Kubernetes para garantizar el 99.9% de uptime.</li>
-                <li><strong>Self-Healing:</strong> Orquestación inteligente que detecta fallos en los Pods y recupera el servicio automáticamente.</li>
-                <li><strong>Backend:</strong> Lógica de monitoreo desarrollada en Python utilizando FastAPI.</li>
+                <li>Despliegue de clúster con 3 réplicas activas.</li>
+                <li>Monitoreo proactivo de la salud de los Pods.</li>
+                <li>Automatización de recuperación ante fallos críticos.</li>
+            </ul>
+        </div>
+
+        <h2>2. Desarrollo de Microservicios</h2>
+        <p>Creación de APIs eficientes y lógica de monitoreo de sistemas con Python.</p>
+
+        <div class="video-wrapper">
+            <iframe src="https://drive.google.com/file/d/1z4OeIHPjFfJ2GHU6Ucox8tiQzcwDcfln/preview" 
+                allow="autoplay">
+            </iframe>
+        </div>
+
+        <div class="resumen">
+            <strong>Highlights técnicos:</strong>
+            <ul>
+                <li>Uso de FastAPI para alto rendimiento.</li>
+                <li>Lógica declarativa para estados del sistema.</li>
+                <li>Integración de logs estructurados.</li>
             </ul>
         </div>
 
         <div class="ai-section">
-            <p><strong>💡 Visión de IA Knowledge:</strong> Este despliegue es el pilar para la implementación de <em>AIOps</em>. La arquitectura permite integrar agentes de aprendizaje automático que analicen logs y métricas en tiempo real para predecir anomalías en la infraestructura antes de que ocurra un downtime.</p>
+            <p><strong>💡 Visión de IA Knowledge:</strong> Mi enfoque técnico no solo busca la estabilidad actual, sino la preparación para el futuro. Al mantener infraestructuras orquestadas en K8s, facilito la implementación de modelos de <strong>IA Predictiva</strong> que optimizan el uso de recursos y previenen caídas mediante el análisis de patrones de datos.</p>
         </div>
 
         <footer>
-            © 2026 Darwin Braca | Construido con Infraestructura como Código
+            © 2026 Darwin Braca | Portafolio Técnico
         </footer>
     </div>
 </body>
