--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span class="tag">Kubernetes (K8s)</span>
             <span class="tag">Docker</span>
             <span class="tag">Python (FastAPI)</span>
-            <span class="tag">PostgreSQL</span>
+            <span class="tag">CI/CD</span>
             <span class="tag">AIOps Vision</span>
         </div>
 
@@ -35,51 +35,46 @@
 
         <h2>1. Infraestructura Resiliente y Alta Disponibilidad</h2>
         <p>Orquestación avanzada con Kubernetes para garantizar la autosanación de servicios.</p>
-
         <div class="video-wrapper">
             <iframe src="https://www.youtube.com/embed/3ugEfcPBwsw" 
                 title="Infraestructura Resiliente - Darwin Braca" 
                 allowfullscreen>
             </iframe>
         </div>
-
         <div class="resumen">
             <strong>Highlights técnicos:</strong>
             <ul>
-                <li>Despliegue de clúster con 3 réplicas activas.</li>
-                <li>Monitoreo proactivo de la salud de los Pods.</li>
-                <li>Automatización de recuperación ante fallos críticos.</li>
+                [cite_start]<li>Despliegue de clúster con 3 réplicas activas para garantizar disponibilidad[cite: 28].</li>
+                [cite_start]<li>Monitoreo de salud de los Pods y recuperación automática ante fallos[cite: 28].</li>
             </ul>
         </div>
 
-        <h2>2. Desarrollo de Microservicios</h2>
-        <p>Creación de APIs eficientes y lógica de monitoreo de sistemas con Python.</p>
-
+        <h2>2. Desarrollo de Microservicios con Python</h2>
+        <p>Demostración de creación de APIs eficientes y lógica de monitoreo de sistemas.</p>
         <div class="video-wrapper">
             <iframe src="https://drive.google.com/file/d/1z4OeIHPjFfJ2GHU6Ucox8tiQzcwDcfln/preview" 
                 allow="autoplay">
             </iframe>
         </div>
-
         <div class="resumen">
             <strong>Highlights técnicos:</strong>
             <ul>
-                <li>Uso de FastAPI para alto rendimiento.</li>
-                <li>Lógica declarativa para estados del sistema.</li>
-                <li>Integración de logs estructurados.</li>
+                [cite_start]<li>Uso de FastAPI para alto rendimiento y automatización de flujos financieros[cite: 28].</li>
+                [cite_start]<li>Implementación de sistemas de observabilidad en contenedores Docker[cite: 28].</li>
             </ul>
         </div>
 
         <div class="ai-section">
-            <p><strong>💡 Visión de IA Knowledge:</strong> Mi enfoque técnico no solo busca la estabilidad actual, sino la preparación para el futuro. Al mantener infraestructuras orquestadas en K8s, facilito la implementación de modelos de <strong>IA Predictiva</strong> que optimizan el uso de recursos y previenen caídas mediante el análisis de patrones de datos.</p>
+            [cite_start]<p><strong>💡 Visión de IA Knowledge:</strong> Este portafolio integra conocimientos de IA para preparar infraestructuras capaces de soportar <em>AIOps</em>, permitiendo un monitoreo predictivo y una gestión de incidentes más inteligente[cite: 26].</p>
         </div>
 
         <footer>
-            © 2026 Darwin Braca | Portafolio Técnico
+            © 2026 Darwin Braca | Portafolio Técnico Actualizado
         </footer>
     </div>
 </body>
 </html>
+
 
 
 
