--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darwin Braca | Portafolio</title>
+    <title>Darwin Braca | Portafolio Técnico</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body { font-family: 'Segoe UI', sans-serif; background-color: #f0f4f8; margin: 0; padding: 0; color: #333; }
@@ -11,20 +11,21 @@
         .profile-img { width: 120px; height: 120px; border-radius: 50%; border: 3px solid #0056b3; object-fit: cover; margin-bottom: 10px; }
         h1 { margin: 5px 0; font-size: 1.8rem; color: #1a1a2e; }
         .subtitle { color: #666; font-size: 1rem; margin-bottom: 15px; }
-        .tags { margin-bottom: 10px; }
         .tag { background: #1a1a2e; color: white; padding: 8px 15px; border-radius: 6px; font-size: 0.85rem; margin: 5px; display: inline-block; }
         .tag i { margin-right: 6px; color: #4dabff; }
 
         .main-container { max-width: 1100px; margin: 30px auto; padding: 0 15px; text-align: center; }
         .video-grid { display: flex; flex-wrap: wrap; gap: 25px; justify-content: center; }
         .video-card { background: #ffffff; width: 100%; max-width: 480px; border-radius: 12px; overflow: hidden; box-shadow: 0 6px 15px rgba(0,0,0,0.1); border: 1px solid #e1e8ed; }
+        
         .iframe-container { position: relative; padding-bottom: 56.25%; height: 0; background: #000; }
         .iframe-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }
+        
         .card-info { padding: 20px; text-align: left; }
-        .card-info h3 { margin: 0 0 8px 0; font-size: 1.1rem; color: #0056b3; }
-        .card-info p { margin: 0; font-size: 0.9rem; color: #555; }
+        .card-info h3 { margin: 0 0 8px 0; font-size: 1.1rem; color: #0056b3; line-height: 1.3; }
+        .card-info p { margin: 0; font-size: 0.95rem; color: #555; line-height: 1.4; }
 
-        .ai-card { background: white; padding: 25px; border-radius: 12px; border-left: 6px solid #0056b3; margin-top: 30px; text-align: left; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .ai-card { background: white; padding: 25px; border-radius: 12px; border-left: 8px solid #0056b3; margin-top: 30px; text-align: left; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
         footer { margin-top: 50px; padding: 20px; color: #888; font-size: 0.85rem; }
     </style>
 </head>
@@ -33,12 +34,12 @@
     <header>
         <img src="perfil.jpg" alt="Darwin Braca" class="profile-img">
         <h1>Darwin Braca</h1>
-        <p class="subtitle">Ingeniero Cloud & DevOps | Infraestructura IT</p>
+        <p class="subtitle">Ingeniero Cloud & DevOps | Especialista en Infraestructura IT</p>
         <div class="tags">
             <span class="tag"><i class="fab fa-docker"></i> Docker</span>
             <span class="tag"><i class="fas fa-cubes"></i> Kubernetes</span>
-            <span class="tag"><i class="fab fa-python"></i> Python</span>
-            <span class="tag"><i class="fas fa-robot"></i> AI Knowledge</span>
+            <span class="tag"><i class="fab fa-python"></i> Python (FastAPI)</span>
+            <span class="tag"><i class="fas fa-brain"></i> AI Knowledge</span>
         </div>
     </header>
 
@@ -49,8 +50,8 @@
                     <iframe src="https://www.youtube.com/embed/3ugEfcPBwsw" allowfullscreen></iframe>
                 </div>
                 <div class="card-info">
-                    <h3>Infraestructura Resiliente (K8s)</h3>
-                    <p>Despliegue de clúster con alta disponibilidad y autosanación automática.</p>
+                    <h3>Infraestructura Resiliente y Alta Disponibilidad</h3>
+                    <p>Orquestación avanzada con K8s para garantizar la autosanación y continuidad operativa del servicio.</p>
                 </div>
             </div>
 
@@ -59,19 +60,8 @@
                     <iframe src="https://drive.google.com/file/d/1z4OeIHPjFfJ2GHU6Ucox8tiQzcwDcfln/preview" allow="autoplay"></iframe>
                 </div>
                 <div class="card-info">
-                    <h3>Microservicios y Backend</h3>
-                    <p>Desarrollo de APIs eficientes en Python con FastAPI y monitoreo de procesos.</p>
+                    <h3>Despliegue de Infraestructura como Código (IaC) y Escalado Horizontal</h3>
+                    <p>Automatización de infraestructura mediante código para permitir el crecimiento elástico de recursos según la demanda.</p>
                 </div>
             </div>
         </div>
-
-        <div class="ai-card">
-            <h3 style="margin-top:0; color:#0056b3;"><i class="fas fa-brain"></i> Visión AI Knowledge</h3>
-            <p style="margin:0;">Diseño infraestructuras preparadas para la integración de inteligencia artificial y el análisis predictivo de logs para optimizar el rendimiento.</p>
-        </div>
-
-        <footer>© 2026 Darwin Braca | Portafolio Técnico Profesional</footer>
-    </div>
-
-</body>
-</html>
