--- a/index.html
+++ b/index.html
@@ -22,10 +22,24 @@
         .iframe-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }
         
         .card-info { padding: 20px; text-align: left; }
-        .card-info h3 { margin: 0 0 8px 0; font-size: 1.1rem; color: #0056b3; line-height: 1.3; }
-        .card-info p { margin: 0; font-size: 0.95rem; color: #555; line-height: 1.4; }
+        .card-info h3 { margin: 0 0 8px 0; font-size: 1.1rem; color: #0056b3; }
+        .card-info p { margin: 0; font-size: 0.95rem; color: #555; }
 
         .ai-card { background: white; padding: 25px; border-radius: 12px; border-left: 8px solid #0056b3; margin-top: 30px; text-align: left; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .roadmap-list { list-style: none; padding: 0; margin-top: 15px; }
+        .roadmap-list li { margin-bottom: 8px; font-size: 0.9rem; display: flex; align-items: center; }
+        .roadmap-list li i { color: #2ecc71; margin-right: 10px; }
+
+        /* SECCIÓN DE CONTACTO */
+        .contact-section { margin-top: 40px; padding: 30px; background: #1a1a2e; border-radius: 15px; color: white; }
+        .contact-buttons { display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; margin-top: 20px; }
+        .btn { padding: 12px 25px; border-radius: 8px; text-decoration: none; font-weight: bold; display: flex; align-items: center; transition: 0.3s; color: white; }
+        .btn i { margin-right: 10px; font-size: 1.2rem; }
+        .btn-whatsapp { background: #25d366; }
+        .btn-whatsapp:hover { background: #128c7e; transform: translateY(-2px); }
+        .btn-linkedin { background: #0077b5; }
+        .btn-linkedin:hover { background: #005582; transform: translateY(-2px); }
+
         footer { margin-top: 50px; padding: 20px; color: #888; font-size: 0.85rem; }
     </style>
 </head>
@@ -34,11 +48,11 @@
     <header>
         <img src="perfil.jpg" alt="Darwin Braca" class="profile-img">
         <h1>Darwin Braca</h1>
-        <p class="subtitle">Ingeniero Cloud & DevOps | Especialista en Infraestructura IT</p>
+        <p class="subtitle">Ingeniero Cloud & DevOps | Infraestructura IT</p>
         <div class="tags">
             <span class="tag"><i class="fab fa-docker"></i> Docker</span>
             <span class="tag"><i class="fas fa-cubes"></i> Kubernetes</span>
-            <span class="tag"><i class="fab fa-python"></i> Python (FastAPI)</span>
+            <span class="tag"><i class="fab fa-python"></i> Python</span>
             <span class="tag"><i class="fas fa-brain"></i> AI Knowledge</span>
         </div>
     </header>
@@ -50,18 +64,12 @@
                     <iframe src="https://www.youtube.com/embed/3ugEfcPBwsw" allowfullscreen></iframe>
                 </div>
                 <div class="card-info">
-                    <h3>Infraestructura Resiliente y Alta Disponibilidad</h3>
-                    <p>Orquestación avanzada con K8s para garantizar la autosanación y continuidad operativa del servicio.</p>
+                    <h3>Infraestructura Resiliente (K8s)</h3>
+                    <p>Despliegue de clúster con alta disponibilidad y autosanación automática.</p>
                 </div>
             </div>
 
             <div class="video-card">
                 <div class="iframe-container">
-                    <iframe src="https://drive.google.com/file/d/1z4OeIHPjFfJ2GHU6Ucox8tiQzcwDcfln/preview" allow="autoplay"></iframe>
-                </div>
-                <div class="card-info">
-                    <h3>Despliegue de Infraestructura como Código (IaC) y Escalado Horizontal</h3>
-                    <p>Automatización de infraestructura mediante código para permitir el crecimiento elástico de recursos según la demanda.</p>
-                </div>
-            </div>
-        </div>
+                    <iframe src="
+
